--- a/05_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.Rnw
+++ b/05_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.Rnw
@@ -77,10 +77,10 @@ I suggest you do the following to prepare:
 \begin{enumerate}
   \item Create a folder for the project, I suggest ``Regional\_Climate\_Trends''. Note that there are no spaces in the folder name. 
   \item Next create a new R markdown file to write your code. Name and save it in your project folder. (For details see Section~\ref{subsec:RMarkdown})
-  \item Create a folder inside the Regional\_Climate\_Trends folder called ``Data``. This will be the location of the data you download.
   \item Download the file oldest.activestation.csv from the Canvas page and upload it to the directory you created in the previous step.
   \item Download the file called Guide1functions.R from the Canvas page and upload it to the directory you created in the previous step. 
   \item Open the file in Rstudio and run the code, using the ``source'' action item near the top, right of the editor window.
+  \item Create a folder inside the Regional\_Climate\_Trends folder called ``Data``. This will be the location of the data you download.
 \end{enumerate}
 
 \section{R Functions for Getting Weather Station Data}
@@ -157,7 +157,9 @@ datapath = "/home/mwl04747/RTricks/05_Regional_Climate_Trends/Data/SP25/"
 downloadStations.fun(datapath, my.inventory)
 @ 
 
-Your data path will NOT be mine. First, you can see your working directory with \texttt{getwd()}. But it probably doesn't include the folder you are working in. I suggest you use file.choose() and select any file in the project folder. Then delete the file name and add the ``/Data'', so it might look something like this: 
+Your data path will NOT be mine. First, you can see your working directory with \texttt{getwd()}. But it probably doesn't include the folder you are working in. I suggest you use file.choose() and select any file in the project folder. 
+
+Then delete the file name (remove the ``stations.active.oldest.csv''!!) and add the ``/Data'', so it might look something like this: 
 
 \begin{verbatim}
 datapath = "/home/XXXXXXXX/Regional_Climate_Trends/Data/"
@@ -168,6 +170,8 @@ This will download the data from the NOAA website and read it into R then writte
 \end{description}
 
 \noindent {\Large\textcolor{ForestGreen}{You're are done with this guide, go to Guide 2!}}
+
+\bigskip
 
 \section{Explaining the Process and Code}
 
