--- a/05_Regional_Climate_Trends/Guides/3_Analyzing_and_Visualizaton_of_Climate_Trends.Rnw
+++ b/05_Regional_Climate_Trends/Guides/3_Analyzing_and_Visualizaton_of_Climate_Trends.Rnw
@@ -186,7 +186,7 @@ plotTrend2.fun(USC00042294.anomalies, "PRCP", 1)
 @
 
 
-\textbf{Milestone:} Selected a Month where the TMIN has the steepest slope and plotted the trend line. Submit this to \texttt{Canvas} for the week's reflection. 
+\textbf{Milestone:} Selected a Month where the TMIN, TMAX, and PRCP has the steepest slope (Estimate) and plotted the trend line. Submit this to \texttt{Canvas} for the week's reflection. 
 
 \bigskip
 
